--- a/multistrap.conf
+++ b/multistrap.conf
@@ -3,7 +3,7 @@ arch=armel
 directory=ev3-rootfs
 noauth=false
 unpack=true
-debootstrap=Emdebian Net Utils Firmware
+debootstrap=Emdebian Net Utils Languages Firmware
 aptsources=Emdebian Firmware
 
 [Emdebian]
@@ -21,7 +21,14 @@ suite=wheezy-grip
 
 [Utils]
 #General purpose utilities
-packages=locales adduser sudo nano less wget vim rsyslog dialog usbutils 
+packages=locales adduser sudo nano less wget vim rsyslog dialog usbutils nfs-common samba-common
+source=http://www.emdebian.org/grip
+keyring=emdebian-archive-keyring
+suite=wheezy-grip
+
+[Languages]
+#General purpose languages
+packages=lua5.1 gawk python2.7 guile-1.8
 source=http://www.emdebian.org/grip
 keyring=emdebian-archive-keyring
 suite=wheezy-grip
