--- a/ev3dev.config
+++ b/ev3dev.config
@@ -1363,12 +1363,12 @@ CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
-CONFIG_USB_MUSB_HDRC=m
+CONFIG_USB_MUSB_HDRC=y
 
 #
 # Platform Glue Layer
 #
-CONFIG_USB_MUSB_DA8XX_GLUE=m
+CONFIG_USB_MUSB_DA8XX_GLUE=y
 # CONFIG_USB_MUSB_DAVINCI is not set
 CONFIG_USB_MUSB_DA8XX=y
 # CONFIG_USB_MUSB_TUSB6010 is not set
@@ -1377,12 +1377,12 @@ CONFIG_USB_MUSB_DA8XX=y
 # CONFIG_USB_MUSB_TI81XX is not set
 # CONFIG_USB_MUSB_BLACKFIN is not set
 # CONFIG_USB_MUSB_UX500 is not set
-CONFIG_USB_TI_CPPI41_DMA_HW=m
+CONFIG_USB_TI_CPPI41_DMA_HW=y
 # CONFIG_MUSB_PIO_ONLY is not set
 # CONFIG_USB_INVENTRA_DMA is not set
 # CONFIG_USB_TI_CPPI_DMA is not set
 CONFIG_USB_TI_CPPI41_DMA=y
-# CONFIG_USB_TI_CPPI41_IN_TRANSPARENT is not set
+CONFIG_USB_TI_CPPI41_IN_TRANSPARENT=y
 # CONFIG_USB_TUSB_OMAP_DMA is not set
 # CONFIG_USB_UX500_DMA is not set
 # CONFIG_USB_RENESAS_USBHS is not set
@@ -1504,7 +1504,7 @@ CONFIG_USB_LEGOTOWER=m
 # CONFIG_USB_TEST is not set
 # CONFIG_USB_ISIGHTFW is not set
 # CONFIG_USB_YUREX is not set
-CONFIG_USB_GADGET=m
+CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
 # CONFIG_USB_GADGET_DEBUG_FS is not set
@@ -1513,27 +1513,26 @@ CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 # CONFIG_USB_FUSB300 is not set
 # CONFIG_USB_R8A66597 is not set
 # CONFIG_USB_MV_UDC is not set
-CONFIG_USB_GADGET_MUSB_HDRC=m
+# CONFIG_USB_GADGET_MUSB_HDRC is not set
 # CONFIG_USB_M66592 is not set
 # CONFIG_USB_NET2272 is not set
-# CONFIG_USB_DUMMY_HCD is not set
+CONFIG_USB_DUMMY_HCD=y
 CONFIG_USB_GADGET_DUALSPEED=y
+CONFIG_USB_GADGET_SUPERSPEED=y
 # CONFIG_USB_ZERO is not set
 CONFIG_USB_ETH=m
-# CONFIG_USB_ETH_RNDIS is not set
+CONFIG_USB_ETH_RNDIS=y
 CONFIG_USB_ETH_EEM=y
 # CONFIG_USB_G_NCM is not set
 # CONFIG_USB_GADGETFS is not set
 # CONFIG_USB_FUNCTIONFS is not set
 # CONFIG_USB_FILE_STORAGE is not set
-# CONFIG_USB_MASS_STORAGE is not set
-CONFIG_USB_G_SERIAL=m
+CONFIG_USB_MASS_STORAGE=m
+# CONFIG_USB_G_SERIAL is not set
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_CDC_COMPOSITE=m
-# CONFIG_USB_G_ACM_MS is not set
-CONFIG_USB_G_MULTI=m
-# CONFIG_USB_G_MULTI_RNDIS is not set
-CONFIG_USB_G_MULTI_CDC=y
+CONFIG_USB_G_ACM_MS=m
+# CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
 # CONFIG_USB_G_DBGP is not set
 
